<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="preference_key_app_theme"
        android:summary="@string/app_theme_description"
        android:title="@string/application_theme" />

    <Preference
        android:key="preference_key_player_color_scheme"
        android:summary="@string/colors_description"
        android:title="@string/player_color_scheme" />

    <Preference
        android:key="preference_key_startup_screen"
        android:summary="@string/default_browser_description"
        android:title="@string/default_browser" />

    <CheckBoxPreference
        android:checked="true"
        android:key="preference_key_lockscreen_controls"
        android:summary="@string/show_lockscreen_controls_description"
        android:title="@string/show_lockscreen_controls" />

</PreferenceScreen>