<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/pin_light"
        android:orderInCategory="97"
        android:showAsAction="always"
        android:title="@string/pin" />

    <item
        android:id="@+id/action_queue_drawer"
        android:icon="@drawable/queue_drawer_light"
        android:orderInCategory="98"
        android:showAsAction="always"
        android:title="@string/current_queue" />

    <item
        android:id="@+id/action_play_all"
        android:icon="@drawable/btn_playback_play"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/play_all" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/action_settings_light"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
