<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/pin_light"
        android:orderInCategory="97"
        android:showAsAction="always"
        android:title="@string/pin" />

    <item
        android:id="@+id/action_queue_drawer"
        android:icon="@drawable/queue_drawer_light"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/current_queue" />

    <item
        android:id="@+id/action_equalizer"
        android:icon="@drawable/equalizer_light"
        android:orderInCategory="98"
        android:showAsAction="always"
        android:title="@string/equalizer" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/action_settings_light"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_equalizer_toggle"
        android:actionLayout="@layout/actionbar_toggle_switch_layout"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/checkmark_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false" />

</menu>
